# howmuchiai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scanner/: Cargo.toml
scanner/docs/: BROWSER_TOKEN_ESTIMATION.md
scanner/src/: browser_data_audit.rs  browser_local_storage.rs  browser_transcripts.rs  device_id.rs  lib.rs  main.rs  platform.rs  sqlite_util.rs  tier.rs  time_util.rs  token_estimate.rs  types.rs
scanner/src/providers/: aider.rs  amp.rs  browser.rs  chatgpt_desktop.rs  claude_code.rs  codex.rs  continue_ext.rs  copilot.rs  cursor.rs  detection.rs  droid.rs  gemini.rs  jetbrains.rs  kimi.rs  mod.rs  ollama.rs  openclaw.rs  opencode.rs  qwen.rs  shell_history.rs  warp.rs
scripts/: verify-local.sh
web/: README.md  package-lock.json  package.json
web/src/lib/: tokenDisplay.test.ts  tokenDisplay.ts  toolBreakdown.test.ts  toolBreakdown.ts  types.ts
