[package]
name = "howmuchiai"
version = "0.3.0"
edition = "2021"
description = "Scan your machine for AI tool usage — Spotify Wrapped for AI"

[[bin]]
name = "howmuchiai"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
dirs = "6"
tempfile = "3"
base64 = "0.22"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
flate2 = "1"
